# ScratchV

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ScratchV_宣讲PPT_polished.pptx  cfg.dot  pyproject.toml  test_review_target.py
.github/prompts/: code-review-prompt.md
.github/workflows/: ai-code-review.yml  ci.yml
.omo/: boulder.json
.omo/drafts/: toy-cfg-peephole.md
.omo/plans/: toy-cfg-peephole.md
.omo/run-continuation/: ses_08c6b4018ffeMDShzHstIgcgT5.json  ses_08c6d78b1ffe5kmhdcnlSdCrLf.json  ses_08c6d882cffeGJatP9qo8Oa7eZ.json  ses_08c6fae74ffe16ZuEyb5sjFJQb.json  ses_08c71867cffeosnHoAnDJYGCeK.json  ses_08c72acf1ffeSkkKRbhvo0IMtI.json  ses_08c74609cffeMB26R5ui6fBEv6.json  ses_08c746811ffexAthQgBi6NB6sx.json  ses_08c7844baffe5OfwHFztHSaEml.json  ses_08c7cc8ccffe8qc3Y5MD6Ez1VR.json  ses_08c7cdbb8ffeOSONd4knc9m8Yu.json  ses_08c7f3293ffez6RdMahIo33Qx6.json  ses_08c8360f5ffesamwzXY84CZMYl.json  ses_08ca9f098ffehozxc3kvmbtR2S.json  ses_08cb3d33bffe7lelYZ64Q356qJ.json  ses_08cb3d4bdffe82Nd9fgl61Lo0d.json  (+6 more)
benchmark_reports/: optimization_history.json
benchmarks/: generate_models.py  run_benchmark.py  test_benchmark.py
docs/: 00-环境搭建指南.md  01-编译器概念入门.md  02-快速上手教程.md  03-指标解读指南.md  04-故障排除FAQ.md  ARCHITECTURE.md  INDEX.md  ScratchV.html  ScratchV.md  developer_guide.md  help.md  index.html  optimization_guide.md  verification.md
examples/: dot_product.dsl  gen_onnx_model.py  loop_add.dsl  matmul_test.dsl  relu_test.dsl  simple_add.dsl  verify_with_tinyfive.py
scratchv/: __init__.py  __main__.py  compiler.py  main.py
scratchv_dag/: __init__.py  allocator.py  cache.py  sdnode.py  selection_dag.py
scripts/: bench_single_ops.py  build_docs_html.py  rebuild_ppt.py  run_full_pipeline.py  split_cnn_to_single_ops.py
tests/: test_backend.py  test_cnn_pipeline.py  test_ir.py  test_optimizer.py  test_optimizer_advanced.py  test_parser.py  test_simulator.py  test_toy_cfg_phase1.py  test_toy_peephole.py
toy_cfg/: __init__.py  demo01_build_blocks.py  demo02_build_cfg.py  demo03_verify_for.py  demo04_visualize.py  demo05_dominators.py
toy_peephole/: demo02_engine.py
(+145 files in other folders)
