[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchv"
version = "0.1.0"
description = "A compiler from ONNX models to RISC-V assembly"
requires-python = ">=3.10"
dependencies = [
    "onnx>=1.14",
    "numpy>=1.24",
    "protobuf>=4.21",
]

[project.scripts]
scratchv = "scratchv.main:main"

[tool.setuptools.packages.find]
include = ["scratchv*"]
